--- a/index.html
+++ b/index.html
@@ -1,134 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Math Expression Evaluator</title>
-  <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: system-ui, sans-serif;
-      background: #f8f9fa;
-      color: #333;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Math Expression Evaluator</title>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: system-ui, sans-serif;
+        background: #f8f9fa;
+        color: #333;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
 
-    .container {
-      background: #fff;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      max-width: 600px;
-      width: 100%;
-    }
+      .container {
+        background: #fff;
+        padding: 2rem;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        max-width: 600px;
+        width: 100%;
+      }
 
-    h1 {
-      text-align: center;
-      margin-bottom: 1rem;
-      font-size: 1.75rem;
-    }
+      h1 {
+        text-align: center;
+        margin-bottom: 1rem;
+        font-size: 1.75rem;
+      }
 
-    textarea {
-      width: 100%;
-      padding: 1rem;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      resize: vertical;
-      min-height: 120px;
-      margin-bottom: 1rem;
-    }
+      textarea {
+        width: 100%;
+        font-size: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        resize: vertical;
+        min-height: 120px;
+        margin-bottom: 1rem;
+      }
 
-    button {
-      background-color: #007bff;
-      color: white;
-      border: none;
-      padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s;
-      width: 100%;
-    }
+      button {
+        background-color: #007bff;
+        color: white;
+        border: none;
+        padding: 0.75rem 1.5rem;
+        font-size: 1rem;
+        border-radius: 8px;
+        cursor: pointer;
+        transition: background 0.3s;
+        width: 100%;
+      }
 
-    button:hover {
-      background-color: #0056b3;
-    }
+      button:hover {
+        background-color: #0056b3;
+      }
 
-    .output {
-      margin-top: 1.5rem;
-    }
+      .output {
+        margin-top: 1.5rem;
+      }
 
-    .output h3 {
-      margin-bottom: 0.5rem;
-    }
+      .output h3 {
+        margin-bottom: 0.5rem;
+      }
 
-    pre {
-      background: #f1f1f1;
-      padding: 1rem;
-      border-radius: 8px;
-      white-space: pre-wrap;
-      word-break: break-word;
-    }
-  </style>
-</head>
-<body>
-  <div id="app" class="container">
-    <h1>Math Expression Evaluator</h1>
+      pre {
+        background: #f1f1f1;
+        padding: 1rem;
+        border-radius: 8px;
+        white-space: pre-wrap;
+        word-break: break-word;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="app" class="container">
+      <h1>Math Expression Evaluator</h1>
 
-    <textarea v-model="expression" placeholder="Enter a math expression like 1+2 or 10/5..."></textarea>
+      <textarea v-model="expression" placeholder="Enter a math expression like 1 + 2 or (10 / 5) + 42"></textarea>
 
-    <button @click="evaluateExpression">Evaluate</button>
+      <button @click="evaluateExpression">Evaluate</button>
 
-    <div class="output" v-if="result">
-      <h3>Response:</h3>
-      <pre>{{ result }}</pre>
+      <div class="output" v-if="result">
+        <h3>Response:</h3>
+        <pre>{{ result }}</pre>
+      </div>
     </div>
-  </div>
 
-  <script>
-    const { createApp, ref } = Vue;
+    <script>
+      const { createApp, ref } = Vue;
 
-    createApp({
-      setup() {
-        const lambdaUrl = '<INSERT FUNCTION URL HERE>';
-        const expression = ref('');
-        const result = ref('');
+      createApp({
+        setup() {
+          const lambdaUrl = '<INSERT FUNCTION URL HERE>';
+          const expression = ref('');
+          const result = ref('');
 
-        const evaluateExpression = async () => {
-          if (!expression.value.trim()) {
-            alert('Please enter a mathematical expression to evaluate!');
-            return;
-          }
-
-          try {
-            const encoded = encodeURIComponent(expression.value);
-            const response = await fetch(`${lambdaUrl}?statement=${encoded}`);
-
-            if (!response.ok) {
-              throw new Error(`HTTP error! Status: ${response.status}`);
+          const evaluateExpression = async () => {
+            if (!expression.value.trim()) {
+              alert('Please enter a mathematical expression to evaluate!');
+              return;
             }
 
-            const text = await response.text();
-            result.value = text;
-          } catch (err) {
-            console.error(err);
-            result.value = 'Error: ' + err.message;
-          }
-        };
+            try {
+              const encoded = encodeURIComponent(expression.value);
+              const response = await fetch(`${lambdaUrl}?statement=${encoded}`);
 
-        return {
-          expression,
-          result,
-          evaluateExpression
-        };
-      }
-    }).mount('#app');
-  </script>
-</body>
+              if (!response.ok) {
+                throw new Error(`HTTP error! Status: ${response.status}`);
+              }
+
+              const text = await response.text();
+              result.value = text;
+            } catch (err) {
+              console.error(err);
+              result.value = 'Error: ' + err.message;
+            }
+          };
+
+          return {
+            expression,
+            result,
+            evaluateExpression
+          };
+        }
+      }).mount('#app');
+    </script>
+  </body>
 </html>
